# career-compass

backend/: .env  .gitignore  CORS_TROUBLESHOOTING.md  README.md  add_student_career_table.py  create_super_admin.py  create_tables.py  fix_roll_number.py  migrate_admin_fields.py  migrate_database.py  populate_careers.py  populate_sql_careers.py  pyproject.toml  requirements.txt  run_server.py  test_relationships.py
backend/app/: dependencies.py  main.py
backend/app/api/v1/: admin.py  admissions.py  ai.py  applications.py  auth.py  careers.py  programs.py  scraper.py  students.py
backend/app/core/: config.py  security.py
backend/app/db/: career.json  models.py  programs_with_universities.json  schemas.py  session.py  store_careers.py  store_programs.py
backend/app/pinecone/: pineconeSetup.py
backend/app/services/: career_recommendation.py  llm.py  result_scraper.py  scraper.py  trends.py  vector_search.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: AIInterview.tsx  AIResults.tsx  AdminApp.tsx  AdminDashboard.tsx  AdminLogin.tsx  ApplicationForm.tsx  ApplyModal.tsx  Dashboard.tsx  LoginForm.tsx  ProgramPage.tsx  ProgramsModal.tsx  RegisterForm.tsx
frontend/src/context/: AdminContext.tsx  AuthContext.tsx
frontend/src/services/: adminApi.ts  api.ts
frontend/src/types/: auth.ts  index.ts  models.ts
frontend/src/utils/: suppressWarnings.ts
