[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Career Compass Backend API"
authors = ["Your Name <you@example.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
alembic = "^1.12.1"
pydantic = {extras = ["email"], version = "^2.5.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
httpx = "^0.25.2"
requests = "^2.31.0"
email-validator = "^2.1.0"
langchain = "^0.1.0"
langchain-google-genai = "^0.0.6"
python-dotenv = "^1.0.0"
pinecone-client = "^2.2.4"

